@@ -34,9 +34,9 @@
 #include "layer.h"
 #include "layer_pvt.h"
 
-#include "libgimp/gimpmath.h"
 #include "libgimp/gimpintl.h"
 #include "libgimp/gimplimits.h"
+#include "libgimp/gimpmath.h"
 
 static ProcRecord image_list_proc;
 static ProcRecord image_new_proc;
@@ -3455,10 +3455,10 @@ image_set_resolution_invoker (Argument *args)
 
   if (success)
     {
-      if (ISNAN (xresolution) || xresolution < GIMP_MIN_RESOLUTION || 
-	  ISINF (xresolution) || xresolution > GIMP_MAX_RESOLUTION ||
-	  ISNAN (yresolution) || yresolution < GIMP_MIN_RESOLUTION || 
-	  ISINF (yresolution) || yresolution > GIMP_MAX_RESOLUTION)
+      if (!FINITE (xresolution) || 
+	  xresolution < GIMP_MIN_RESOLUTION || xresolution > GIMP_MAX_RESOLUTION ||
+	  !FINITE (yresolution) || 
+	  yresolution < GIMP_MIN_RESOLUTION || yresolution > GIMP_MAX_RESOLUTION)
 	{
 	  g_message (_("Image resolution is out of bounds,\n" 
 		       "using the default resolution instead."));
