@@ -1212,10 +1212,10 @@ HELP
 
     $invoke{code} = <<'CODE';
 {
-  if (ISNAN (xresolution) || xresolution < GIMP_MIN_RESOLUTION || 
-      ISINF (xresolution) || xresolution > GIMP_MAX_RESOLUTION ||
-      ISNAN (yresolution) || yresolution < GIMP_MIN_RESOLUTION || 
-      ISINF (yresolution) || yresolution > GIMP_MAX_RESOLUTION)
+  if (!FINITE (xresolution) || 
+      xresolution < GIMP_MIN_RESOLUTION || xresolution > GIMP_MAX_RESOLUTION ||
+      !FINITE (yresolution) || 
+      yresolution < GIMP_MIN_RESOLUTION || yresolution > GIMP_MAX_RESOLUTION)
     {
       g_message (_("Image resolution is out of bounds,\n" 
                    "using the default resolution instead."));
